kubernetes/applications/public/dashboard/ingressroute-external.yaml
---
# External access via Cloudflare Tunnel
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-external
  namespace: default
  labels:
    app: dashboard
    access: external
spec:
  entryPoints:
    - websecure
  
  routes:
    - match: Host(`shreck.co.uk`) || Host(`www.shreck.co.uk`)
      kind: Rule
      services:
        - name: dashboard
          port: 80
      
      middlewares:
        - name: external-chain
          namespace: traefik
  
  tls:
    secretName: shreck-co-uk-tls
    options:
      name: default
      namespace: traefik
